Updated Drum Page
Updated Drum Page to include all drum products

--- a/drums_percussions.html
+++ b/drums_percussions.html
@@ -55,21 +55,225 @@
         </nav>
 
         <div class="container-fluid">
-            <div class="row">
-              <div class="col-12">
-                  <h2>Sub Heading</h2>
-                    <h3>Sub Heading</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque urna sem, fringilla sit amet dui quis, sodales sollicitudin ipsum. Nunc feugiat blandit neque, quis molestie quam imperdiet at. Pellentesque varius laoreet imperdiet. Donec suscipit accumsan dui, id imperdiet nulla eleifend vel. Nullam aliquam est in cursus faucibus. Etiam eu porttitor justo. Suspendisse iaculis imperdiet risus eget semper. Nulla facilisi.</p>
-                    <h3>Sub Heading</h3>
-                    <p>Suspendisse vitae ex non dui sollicitudin elementum. Nunc nec lacus eget purus iaculis porta. In hac habitasse platea dictumst. Nunc eget iaculis turpis. Curabitur elementum lacus vitae nunc vulputate, eu suscipit velit ullamcorper. Vestibulum in mauris pharetra, hendrerit erat in, molestie neque. In hac habitasse platea dictumst. Sed eu felis nec odio luctus pulvinar et vel erat. Etiam id lacus a quam pretium porta ut porttitor elit.</p>
-                    <h3>Sub Heading</h3>
-                    <p>Donec sodales leo in volutpat auctor. Sed non egestas metus. Aliquam mollis placerat lectus, a sollicitudin odio imperdiet elementum. Cras feugiat cursus finibus. In luctus lectus quis tellus ultrices, ut semper purus commodo. Nullam tincidunt, erat nec sodales condimentum, magna neque ultrices ipsum, id ullamcorper orci lacus in lectus. Vivamus ut neque nisi. Fusce vel tempor eros. Suspendisse tempor ornare convallis. Mauris tellus lorem, consequat id felis nec, suscipit porta arcu. Aliquam pretium lobortis dolor, at hendrerit ligula facilisis vel. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
-                    <h3>Sub Heading</h3>
-                    <p>Quisque sit amet egestas odio. Integer bibendum ornare elementum. Etiam placerat tempor lorem sed congue. Sed purus magna, rutrum id justo eu, facilisis ultrices elit. Sed fermentum nisl in ipsum posuere, quis sagittis neque sagittis. Sed volutpat lacus ut lectus vulputate, non efficitur purus efficitur. Curabitur eget nulla ac urna eleifend faucibus ac eget risus. Duis quis arcu eget elit aliquam cursus non in odio. Mauris vulputate dolor diam, quis vestibulum sem malesuada non. Etiam eget nisl ex. Nulla nec ultricies magna. Maecenas blandit elit ac diam lacinia semper. Curabitur scelerisque felis vitae mi iaculis bibendum. Integer lacinia pharetra consectetur. Duis interdum, felis vel maximus sodales, quam metus maximus turpis, sit amet aliquet mi ex eget est. Nullam accumsan odio justo, feugiat consequat magna scelerisque ac.</p>
-                    <h3>Sub Heading</h3>
-                    <p>Integer id egestas tellus, vel sollicitudin nulla. Duis eu nibh imperdiet, convallis nulla ac, porttitor erat. Pellentesque convallis orci sit amet nisl congue, sed fringilla quam efficitur. Pellentesque turpis purus, fermentum sed viverra non, consectetur eu urna. Donec laoreet purus ex, a vestibulum turpis placerat a. Etiam interdum urna in enim dignissim accumsan. Suspendisse a velit rhoncus, pulvinar ex sit amet, ultrices odio.</p>
-              </div>
+          <div class="row">
+            <div class="col-12">
+                <div id="centre_heading"><h1>Drums/Percussion</h1></div>
             </div>
+          </div>
+        </div>
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-12">
+                <div id="centre_heading"><h2>Please Contact us for avaliability and a test time</h2></div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-12">
+              <p></p>
+            </div>
+          </div>
+        </div>
+
+        <div class="container-fluid">
+          <div class="row">
+              <div class="col-12 col-xs-12 col-sm-6 col-md-4 col-lg-4">
+                  <div class="card-2">
+                      <img class="card-img-top" src="images/drums/pearl_drum_kit.jpg" alt="Pearl Drum Kit">
+                      <div class="card-body">
+                          <h2>Pearl Roadshow 5PC Drumkit Red Wine Finish</h2>
+                          <h3>$899.00</h3>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-12 col-xs-12 col-sm-6 col-md-8 col-lg-8">
+                  <table class="table table-hover">
+                      <tr>
+                        <td>Brand</td>
+                        <td>Pearl</td>
+                      </tr>
+                      <tr>
+                        <td>Colour</td>
+                        <td>Red Wine</td>
+                      </tr>
+                      <tr>
+                        <td>Mounted Toms - Dimensions (Inches)</td>
+                        <td>10x7, 12x8" (With Mounting Equipment)</td>
+                      </tr>
+                      <tr>
+                        <td>Floor Tom - Dimensions (Inches)</td>
+                        <td>14x14" (With Legs)</td>
+                      </tr>
+                      <tr>
+                        <td>Bass Drum - Dimensions (Inches)</td>
+                        <td>20x16"</td>
+                      </tr>
+                      <tr>
+                        <td>Snare Drum - Dimensions (Inches)</td>
+                        <td>14x5.5"</td>
+                      </tr>
+                      <tr>
+                        <td>Description</td>
+                        <td>Second-rate gear only makes the drumming journey harder.  Here are some things to look for when buying your first drum kit; see for yourself how Roadshow stacks up: Cymbal, hi-hat, and snare drum stands should start with a strong and well-balanced tripod base. The Snare Drum is the voice of the drum set and captures everything from the loudest accents to the softest “ghost” notes. The bass drum is the tonal heartbeat of the drum set and should not only set the low-end pulse for the groove but be a foundation for the rest of the complete drum set-up.</td>
+                      </tr>
+                      <tr>
+                        <td>Includes</td>
+                        <td>Drum Kit (Excludes Symbols), Throne, Profession Sticks and Bag</td>
+                      </tr>
+                      <tr>
+                        <td>Rating</td>
+                        <td><span class="badge badge-pill badge-success">92</span></td>
+                      </tr>
+                  </table>
+              </div>
+          </div>
+        </div>
+        <div class="container-fluid">
+          <div class="row">
+              <div class="col-12 col-xs-12 col-sm-6 col-md-4 col-lg-4">
+                  <div class="card-2">
+                      <img class="card-img-top" src="images/drums/ludwig_drum_kit.jpg" alt="Ludwig Drum Kit">
+                      <div class="card-body">
+                          <h2>Ludwig Accent 5-Piece Drum Kit Red Sparkle with 22" Bass Drum, Hardware</h2>
+                          <h3>$1,400</h3>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-12 col-xs-12 col-sm-6 col-md-8 col-lg-8">
+                  <table class="table table-hover">
+                      <tr>
+                        <td>Brand</td>
+                        <td>Ludwig</td>
+                      </tr>
+                      <tr>
+                        <td>Colour</td>
+                        <td>Red Sparkle</td>
+                      </tr>
+                      <tr>
+                        <td>Mounted Toms - Dimensions (Inches)</td>
+                        <td>10x7, 12x8" (With Mounting Equipment)</td>
+                      </tr>
+                      <tr>
+                        <td>Floor Tom - Dimensions (Inches)</td>
+                        <td>16x16" (With Legs)</td>
+                      </tr>
+                      <tr>
+                        <td>Bass Drum - Dimensions (Inches)</td>
+                        <td>22x16"</td>
+                      </tr>
+                      <tr>
+                        <td>Snare Drum - Dimensions (Inches)</td>
+                        <td>14x5"</td>
+                      </tr>
+                      <tr>
+                        <td>Description</td>
+                        <td>Ludwig’s Accent Series has been the launching pad for countless drummers all over the world for decades as it has everything you need for a solid drumming foundation. Ludwig has raised the bar on this legendary series with some truly road-worthy features like traditional size shells, double-ply batter heads, power collar bass drumheads, three dazzling sparkle finishes and an upgraded hardware and cymbal package.</td>
+                      </tr>
+                      <tr>
+                        <td>Includes</td>
+                        <td>Drum Kit (Excludes Symbols), Throne, Profession Sticks and Bag</td>
+                      </tr>
+                      <tr>
+                        <td>Rating</td>
+                        <td><span class="badge badge-pill badge-success">95</span></td>
+                      </tr>
+                  </table>
+              </div>
+          </div>
+        </div>
+        <div class="container-fluid">
+          <div class="row">
+              <div class="col-12 col-xs-12 col-sm-6 col-md-4 col-lg-4">
+                  <div class="card-2">
+                      <img class="card-img-top" src="images/drums/tama_drum_kit.jpg" alt="Tama Drum Kit">
+                      <div class="card-body">
+                          <h2>Tama Imperialstar 5-Piece Drum Kit with Meinl HCS Cymbals - Black Oak Wrap</h2>
+                          <h3>$1,800</h3>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-12 col-xs-12 col-sm-6 col-md-8 col-lg-8">
+                  <table class="table table-hover">
+                      <tr>
+                        <td>Brand</td>
+                        <td>Tama</td>
+                      </tr>
+                      <tr>
+                        <td>Colour</td>
+                        <td>Black Oak</td>
+                      </tr>
+                      <tr>
+                        <td>Mounted Toms - Dimensions (Inches)</td>
+                        <td>10x7, 12x8" (With Mounting Equipment)</td>
+                      </tr>
+                      <tr>
+                        <td>Floor Tom - Dimensions (Inches)</td>
+                        <td>15x15" (With Legs)</td>
+                      </tr>
+                      <tr>
+                        <td>Bass Drum - Dimensions (Inches)</td>
+                        <td>24x20"</td>
+                      </tr>
+                      <tr>
+                        <td>Snare Drum - Dimensions (Inches)</td>
+                        <td>15x6"</td>
+                      </tr>
+                      <tr>
+                        <td>Description</td>
+                        <td>Imperialstar complete drum kits provide everything a drummer needs at an affordable price. The Imperialstar line offers various choices of kit configurations and finishes, availability of add-on drums, precisely-processed drum shells and reliable, durable hardware. Imperialstar may appeal to beginner drummers due to the price, but more experienced intermediate players enjoy playing great-sounding Imperialstar kits in every music genre from jazz and R&B to rock.</td>
+                      </tr>
+                      <tr>
+                        <td>Includes</td>
+                        <td>Drum Kit (Includes Symbols), Throne, Profession Sticks and Bag</td>
+                      </tr>
+                      <tr>
+                        <td>Rating</td>
+                        <td><span class="badge badge-pill badge-success">98</span></td>
+                      </tr>
+                  </table>
+              </div>
+          </div>
+        </div>
+        <div class="container-fluid">
+          <div class="row">
+              <div class="col-12 col-xs-12 col-sm-6 col-md-4 col-lg-4">
+                  <div class="card-2">
+                      <img class="card-img-top" src="images/drums/roland_drum_kit.jpg" alt="Roland Drum Kit">
+                      <div class="card-body">
+                          <h2>Roland Drums TD27KV Electronic Drumkit Includes MDSSTD2 Stand</h2>
+                          <h3>$5,000</h3>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-12 col-xs-12 col-sm-6 col-md-8 col-lg-8">
+                  <table class="table table-hover">
+                      <tr>
+                        <td>Brand</td>
+                        <td>Roland</td>
+                      </tr>
+                      <tr>
+                        <td>Colour</td>
+                        <td>Black</td>
+                      </tr>
+                      <tr>
+                        <td>Performance and Recording</td>
+                        <td>The TD-27KV delivers fantastic sound for live performance or recording, thanks to a wealth of connectivity options. The TD-27 module features stereo outputs for the overall drum sound, plus two direct outputs for sending kick, snare, and other sounds to an audio console for independent mixing. In the studio, the built-in USB audio interface makes computer music production easy, with up to 28 audio channels available over a single cable. MIDI is also supported via USB and dedicated I/O, allowing you to sync with other MIDI devices and trigger sounds in computer software.</td>
+                      </tr>
+                      <tr>
+                        <td>Description</td>
+                        <td>The mid-level TD-27KV delivers the immersive sound and response that you only get with V-Drums. At its heart is the powerful new TD-27 sound engine, filled with premium-grade, fully-customizable drum and cymbal sounds. Advanced digital trigger technology detects every playing nuance in ultra-high definition, while large-diameter drum and cymbal pads offer exceptional feel, presented in a spacious acoustic-style layout.</td>
+                      </tr>
+                      <tr>
+                        <td>Includes</td>
+                        <td>Drum Kit, Throne, Profession Sticks and Bag</td>
+                      </tr>
+                      <tr>
+                        <td>Rating</td>
+                        <td><span class="badge badge-pill badge-success">99</span></td>
+                      </tr>
+                  </table>
+              </div>
+          </div>
+        </div>
         </div>
 
         <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
