--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                     <img class="card-img-top" src="images/index_page/speakers.jpg" alt="Sound Page">
                     <div class="card-body">
                         <h2>Sound Equipment</h2>
-                        <h3>Speakers, Mixers, Microphones</h3>
+                        <h3>Speakers and Mixers</h3>
                         <p>Explore our range of Yamaha and Mackie Thump</p>
                         <a href="sound.html" class="btn btn-primary">Expore our range</a>
                     </div>
