--- a/accessories.html
+++ b/accessories.html
@@ -55,7 +55,29 @@
         </nav>
 
         <div class="container-fluid">
-            <div class="row">
+          <div class="row">
+            <div class="col-12">
+                <div id="centre_heading"><h1>Accessories</h1></div>
+            </div>
+          </div>
+        </div>
+
+
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-12 col-xs-6 col-sm-6 col-md-3 col-lg-3">
+                <div class="card-2 mb-4">
+                    <img class="card-img-top-2" src="images/accessories/boss_chorus_pedal.jpg" alt="Boss Chorus Pedal">
+                    <div class="card-body">
+                        <h2>Boss Chorus Pedal</h2>
+                        <h3>$60.50</h3>
+                        <p><span class="badge badge-pill badge-success">92</span></p>
+                        <a href="" class="btn btn-primary">Add to cart</a>
+                    </div>
+                </div>
+            </div>
+          </div>  
+          <div class="row">
               <div class="col-12">
                   <h2>Sub Heading</h2>
                     <h3>Sub Heading</h3>
