Updated Accessories Page
Updated Accessories Page to have all accessories required

--- a/accessories.html
+++ b/accessories.html
@@ -60,10 +60,6 @@
                 <div id="centre_heading"><h1>Accessories</h1></div>
             </div>
           </div>
-        </div>
-
-
-        <div class="container-fluid">
           <div class="row">
             <div class="col-12 col-xs-6 col-sm-6 col-md-3 col-lg-3">
                 <div class="card-2 mb-4">
@@ -76,22 +72,179 @@
                     </div>
                 </div>
             </div>
-          </div>  
-          <div class="row">
-              <div class="col-12">
-                  <h2>Sub Heading</h2>
-                    <h3>Sub Heading</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque urna sem, fringilla sit amet dui quis, sodales sollicitudin ipsum. Nunc feugiat blandit neque, quis molestie quam imperdiet at. Pellentesque varius laoreet imperdiet. Donec suscipit accumsan dui, id imperdiet nulla eleifend vel. Nullam aliquam est in cursus faucibus. Etiam eu porttitor justo. Suspendisse iaculis imperdiet risus eget semper. Nulla facilisi.</p>
-                    <h3>Sub Heading</h3>
-                    <p>Suspendisse vitae ex non dui sollicitudin elementum. Nunc nec lacus eget purus iaculis porta. In hac habitasse platea dictumst. Nunc eget iaculis turpis. Curabitur elementum lacus vitae nunc vulputate, eu suscipit velit ullamcorper. Vestibulum in mauris pharetra, hendrerit erat in, molestie neque. In hac habitasse platea dictumst. Sed eu felis nec odio luctus pulvinar et vel erat. Etiam id lacus a quam pretium porta ut porttitor elit.</p>
-                    <h3>Sub Heading</h3>
-                    <p>Donec sodales leo in volutpat auctor. Sed non egestas metus. Aliquam mollis placerat lectus, a sollicitudin odio imperdiet elementum. Cras feugiat cursus finibus. In luctus lectus quis tellus ultrices, ut semper purus commodo. Nullam tincidunt, erat nec sodales condimentum, magna neque ultrices ipsum, id ullamcorper orci lacus in lectus. Vivamus ut neque nisi. Fusce vel tempor eros. Suspendisse tempor ornare convallis. Mauris tellus lorem, consequat id felis nec, suscipit porta arcu. Aliquam pretium lobortis dolor, at hendrerit ligula facilisis vel. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
-                    <h3>Sub Heading</h3>
-                    <p>Quisque sit amet egestas odio. Integer bibendum ornare elementum. Etiam placerat tempor lorem sed congue. Sed purus magna, rutrum id justo eu, facilisis ultrices elit. Sed fermentum nisl in ipsum posuere, quis sagittis neque sagittis. Sed volutpat lacus ut lectus vulputate, non efficitur purus efficitur. Curabitur eget nulla ac urna eleifend faucibus ac eget risus. Duis quis arcu eget elit aliquam cursus non in odio. Mauris vulputate dolor diam, quis vestibulum sem malesuada non. Etiam eget nisl ex. Nulla nec ultricies magna. Maecenas blandit elit ac diam lacinia semper. Curabitur scelerisque felis vitae mi iaculis bibendum. Integer lacinia pharetra consectetur. Duis interdum, felis vel maximus sodales, quam metus maximus turpis, sit amet aliquet mi ex eget est. Nullam accumsan odio justo, feugiat consequat magna scelerisque ac.</p>
-                    <h3>Sub Heading</h3>
-                    <p>Integer id egestas tellus, vel sollicitudin nulla. Duis eu nibh imperdiet, convallis nulla ac, porttitor erat. Pellentesque convallis orci sit amet nisl congue, sed fringilla quam efficitur. Pellentesque turpis purus, fermentum sed viverra non, consectetur eu urna. Donec laoreet purus ex, a vestibulum turpis placerat a. Etiam interdum urna in enim dignissim accumsan. Suspendisse a velit rhoncus, pulvinar ex sit amet, ultrices odio.</p>
+            <div class="col-12 col-xs-6 col-sm-6 col-md-3 col-lg-3">
+              <div class="card-2 mb-4">
+                  <img class="card-img-top-2" src="images/accessories/fender_reverb_pedal.jpg" alt="Fender Reverb Pedal">
+                  <div class="card-body">
+                      <h2>Fender Reverb Pedal</h2>
+                      <h3>$40.00</h3>
+                      <p><span class="badge badge-pill badge-success">85</span></p>
+                      <a href="" class="btn btn-primary">Add to cart</a>
+                  </div>
               </div>
             </div>
+            <div class="col-12 col-xs-6 col-sm-6 col-md-3 col-lg-3">
+              <div class="card-2 mb-4">
+                  <img class="card-img-top-2" src="images/accessories/boss_foot_volume_pedal.jpg" alt="Boss Volume Pedal">
+                  <div class="card-body">
+                      <h2>Boss Foot Control Volume Pedal</h2>
+                      <h3>$55.00</h3>
+                      <p><span class="badge badge-pill badge-success">95</span></p>
+                      <a href="" class="btn btn-primary">Add to cart</a>
+                  </div>
+              </div>
+            </div>
+            <div class="col-12 col-xs-6 col-sm-6 col-md-3 col-lg-3">
+              <div class="card-2 mb-4">
+                  <img class="card-img-top-2" src="images/accessories/vox_wha_wha_pedal.jpg" alt="Vox Wha Wha Pedal">
+                  <div class="card-body">
+                      <h2>Vox Wha Wha Pedal</h2>
+                      <h3>$80.00</h3>
+                      <p><span class="badge badge-pill badge-success">97</span></p>
+                      <a href="" class="btn btn-primary">Add to cart</a>
+                  </div>
+              </div>
+            </div>
+          </div>
+            <div class="row">
+              <div class="col-12 col-xs-6 col-sm-6 col-md-3 col-lg-3">
+                  <div class="card-2 mb-4">
+                      <img class="card-img-top-2" src="images/accessories/9m_balanced_xlr_cable.jpg" alt="9M Balanced XLR Cable">
+                      <div class="card-body">
+                          <h2>9M Balanced XLR Cable</h2>
+                          <h3>$30.00</h3>
+                          <p><span class="badge badge-pill badge-success">85</span></p>
+                          <a href="" class="btn btn-primary">Add to cart</a>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-12 col-xs-6 col-sm-6 col-md-3 col-lg-3">
+                <div class="card-2 mb-4">
+                    <img class="card-img-top-2" src="images/accessories/15m_balanced_xlr_cable.jpg" alt="15M Balanced XLR Cable">
+                    <div class="card-body">
+                        <h2>15M Balanced XLR Cable</h2>
+                        <h3>$60.00</h3>
+                        <p><span class="badge badge-pill badge-success">85</span></p>
+                        <a href="" class="btn btn-primary">Add to cart</a>
+                    </div>
+                </div>
+              </div>
+              <div class="col-12 col-xs-6 col-sm-6 col-md-3 col-lg-3">
+                <div class="card-2 mb-4">
+                    <img class="card-img-top-2" src="images/accessories/3m_fender_guitar_jack.jpg" alt="3M Fender Guitar Cable">
+                    <div class="card-body">
+                        <h2>3M Fender Guitar Cable</h2>
+                        <h3>$15.00</h3>
+                        <p><span class="badge badge-pill badge-success">90</span></p>
+                        <a href="" class="btn btn-primary">Add to cart</a>
+                    </div>
+                </div>
+              </div>
+              <div class="col-12 col-xs-6 col-sm-6 col-md-3 col-lg-3">
+                <div class="card-2 mb-4">
+                    <img class="card-img-top-2" src="images/accessories/5.5m_fender_guitar_jack.jpg" alt="5.5M Fender Guitar Cable">
+                    <div class="card-body">
+                        <h2>5.5M Fender Guitar Cable</h2>
+                        <h3>$30.00</h3>
+                        <p><span class="badge badge-pill badge-success">95</span></p>
+                        <a href="" class="btn btn-primary">Add to cart</a>
+                    </div>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-12 col-xs-6 col-sm-6 col-md-3 col-lg-3">
+                  <div class="card-2 mb-4">
+                      <img class="card-img-top-2" src="images/accessories/1.5m_red_white_cable.jpg" alt="1.5M Red and White Audio Cable">
+                      <div class="card-body">
+                          <h2>1.5M Red-White Audio Cable</h2>
+                          <h3>$30.00</h3>
+                          <p><span class="badge badge-pill badge-success">85</span></p>
+                          <a href="" class="btn btn-primary">Add to cart</a>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-12 col-xs-6 col-sm-6 col-md-3 col-lg-3">
+                <div class="card-2 mb-4">
+                    <img class="card-img-top-2" src="images/accessories/artist_aframe_guitar_stand.jpg" alt="Artist Aframe Guitar Stand">
+                    <div class="card-body">
+                        <h2>Artist Aframe Guitar Stand</h2>
+                        <h3>$35.00</h3>
+                        <p><span class="badge badge-pill badge-success">98</span></p>
+                        <a href="" class="btn btn-primary">Add to cart</a>
+                    </div>
+                </div>
+              </div>
+              <div class="col-12 col-xs-6 col-sm-6 col-md-3 col-lg-3">
+                <div class="card-2 mb-4">
+                    <img class="card-img-top-2" src="images/accessories/boom_microphone_stand_3axis.jpg" alt="Boom Microphone Stand">
+                    <div class="card-body">
+                        <h2>Boom 3 Axis Mic Stand</h2>
+                        <h3>$45.00</h3>
+                        <p><span class="badge badge-pill badge-success">82</span></p>
+                        <a href="" class="btn btn-primary">Add to cart</a>
+                    </div>
+                </div>
+              </div>
+              <div class="col-12 col-xs-6 col-sm-6 col-md-3 col-lg-3">
+                <div class="card-2 mb-4">
+                    <img class="card-img-top-2" src="images/accessories/orchestral_music_stand.jpg" alt="Orchestral Music Stand">
+                    <div class="card-body">
+                        <h2>Orchestral Music Stand</h2>
+                        <h3>$100.00</h3>
+                        <p><span class="badge badge-pill badge-success">99</span></p>
+                        <a href="" class="btn btn-primary">Add to cart</a>
+                    </div>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-12 col-xs-6 col-sm-6 col-md-3 col-lg-3">
+                  <div class="card-2 mb-4">
+                      <img class="card-img-top-2" src="images/accessories/akg_p170_small_condenser.jpg" alt="AKG P170 Small Condenser">
+                      <div class="card-body">
+                          <h2>AKG P170 Small Condenser</h2>
+                          <h3>$200.00</h3>
+                          <p><span class="badge badge-pill badge-success">90</span></p>
+                          <a href="" class="btn btn-primary">Add to cart</a>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-12 col-xs-6 col-sm-6 col-md-3 col-lg-3">
+                <div class="card-2 mb-4">
+                    <img class="card-img-top-2" src="images/accessories/shure_ksm137_pair_condensers.jpg" alt="Shure KSM137 Pair Condensers">
+                    <div class="card-body">
+                        <h2>Shure KSM137 Pair Condensers</h2>
+                        <h3>$500.00</h3>
+                        <p><span class="badge badge-pill badge-success">95</span></p>
+                        <a href="" class="btn btn-primary">Add to cart</a>
+                    </div>
+                </div>
+              </div>
+              <div class="col-12 col-xs-6 col-sm-6 col-md-3 col-lg-3">
+                <div class="card-2 mb-4">
+                    <img class="card-img-top-2" src="images/accessories/shure_vocal_cardioid_mic.jpg" alt="Shure Vocal Cardioid Mic">
+                    <div class="card-body">
+                        <h2>Shure Vocal Cardioid Mic</h2>
+                        <h3>$200.00</h3>
+                        <p><span class="badge badge-pill badge-success">85</span></p>
+                        <a href="" class="btn btn-primary">Add to cart</a>
+                    </div>
+                </div>
+              </div>
+              <div class="col-12 col-xs-6 col-sm-6 col-md-3 col-lg-3">
+                <div class="card-2 mb-4">
+                    <img class="card-img-top-2" src="images/accessories/sennheiser_e_845_vocal.jpg" alt="Sennheiser E845 Vocal Mic">
+                    <div class="card-body">
+                        <h2>Sennheiser E845 Vocal Mic</h2>
+                        <h3>$300.00</h3>
+                        <p><span class="badge badge-pill badge-success">90</span></p>
+                        <a href="" class="btn btn-primary">Add to cart</a>
+                    </div>
+                </div>
+              </div>
+            </div>
+          </div>  
         </div>
 
         <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
