Updated Contact Us Page
Updated Contact Us Page to include interactive google map, and title

--- a/contact_us.html
+++ b/contact_us.html
@@ -57,6 +57,23 @@
         <div class="container-fluid">
             <div class="row">
               <div class="col-12">
+                  <div id="centre_heading"><h1>Contact Us</h1></div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-12">
+                  <p></p>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-12">
+                <div class="Map">
+                  <iframe width="100%" height="450" style="border:0" loading="lazy" allowfullscreen src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJD0Nh8eFIDW0Rixm5PJRuOdQ&key=AIzaSyBj9ojPqPcjOUAUsdF-tqXNKe8Wld3GfP8"></iframe>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-12">
                   <h2>Sub Heading</h2>
                     <h3>Sub Heading</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque urna sem, fringilla sit amet dui quis, sodales sollicitudin ipsum. Nunc feugiat blandit neque, quis molestie quam imperdiet at. Pellentesque varius laoreet imperdiet. Donec suscipit accumsan dui, id imperdiet nulla eleifend vel. Nullam aliquam est in cursus faucibus. Etiam eu porttitor justo. Suspendisse iaculis imperdiet risus eget semper. Nulla facilisi.</p>
@@ -68,6 +85,7 @@
                     <p>Quisque sit amet egestas odio. Integer bibendum ornare elementum. Etiam placerat tempor lorem sed congue. Sed purus magna, rutrum id justo eu, facilisis ultrices elit. Sed fermentum nisl in ipsum posuere, quis sagittis neque sagittis. Sed volutpat lacus ut lectus vulputate, non efficitur purus efficitur. Curabitur eget nulla ac urna eleifend faucibus ac eget risus. Duis quis arcu eget elit aliquam cursus non in odio. Mauris vulputate dolor diam, quis vestibulum sem malesuada non. Etiam eget nisl ex. Nulla nec ultricies magna. Maecenas blandit elit ac diam lacinia semper. Curabitur scelerisque felis vitae mi iaculis bibendum. Integer lacinia pharetra consectetur. Duis interdum, felis vel maximus sodales, quam metus maximus turpis, sit amet aliquet mi ex eget est. Nullam accumsan odio justo, feugiat consequat magna scelerisque ac.</p>
                     <h3>Sub Heading</h3>
                     <p>Integer id egestas tellus, vel sollicitudin nulla. Duis eu nibh imperdiet, convallis nulla ac, porttitor erat. Pellentesque convallis orci sit amet nisl congue, sed fringilla quam efficitur. Pellentesque turpis purus, fermentum sed viverra non, consectetur eu urna. Donec laoreet purus ex, a vestibulum turpis placerat a. Etiam interdum urna in enim dignissim accumsan. Suspendisse a velit rhoncus, pulvinar ex sit amet, ultrices odio.</p>
+                </div>
               </div>
             </div>
         </div>
