Updated Contact Us Page
Updated Contact Us Page to include contact details

--- a/contact_us.html
+++ b/contact_us.html
@@ -74,6 +74,49 @@
             </div>
             <div class="row">
               <div class="col-12">
+                  <p></p>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-12 col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                <table class="table table-hover">
+                    <tr>
+                      <td>Company Name:</td>
+                      <td>Lopez MusicShop</td>
+                    </tr>
+                    <tr>
+                      <td>Address:</td>
+                      <td>20 Cawley Street, Ellerslie, Auckland 1051</td>
+                    </tr>
+                    <tr>
+                      <td>Phone Number (Mobile):</td>
+                      <td>021 678 6523</td>
+                    </tr>
+                    <tr>
+                      <td>Phone Number (Landline):</td>
+                      <td>07 345 4997</td>
+                    </tr>
+                    <tr>
+                      <td>Timings:</td>
+                      <td>Open 7 days a week:</td>
+                    </tr>
+                    <tr>
+                      <td></td>
+                      <td>Monday to Friday: 8am to 6pm</td>
+                    </tr>
+                    <tr>
+                      <td></td>
+                      <td>Saturday to Sunday: 9am to 5pm</td>
+                    </tr> 
+                    <tr>
+                      <td>Email</td>
+                      <td>Lopez_MusicShop2018@gmail.com</td>
+                    </tr>
+                </table>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-12">
                   <h2>Sub Heading</h2>
                     <h3>Sub Heading</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque urna sem, fringilla sit amet dui quis, sodales sollicitudin ipsum. Nunc feugiat blandit neque, quis molestie quam imperdiet at. Pellentesque varius laoreet imperdiet. Donec suscipit accumsan dui, id imperdiet nulla eleifend vel. Nullam aliquam est in cursus faucibus. Etiam eu porttitor justo. Suspendisse iaculis imperdiet risus eget semper. Nulla facilisi.</p>
