Updated Contact Us Page
Updated Contact Us Page to correct inconsistency in table

--- a/contact_us.html
+++ b/contact_us.html
@@ -109,7 +109,7 @@
                       <td>Saturday to Sunday: 9am to 5pm</td>
                     </tr> 
                     <tr>
-                      <td>Email</td>
+                      <td>Email:</td>
                       <td>Lopez_MusicShop2018@gmail.com</td>
                     </tr>
                 </table>
